@@ -402,6 +402,7 @@ CREATE TABLE IF NOT EXISTS `{PREFIX}user_roles` (
   `save_document` int(1) NOT NULL default '0',
   `publish_document` int(1) NOT NULL default '0',
   `delete_document` int(1) NOT NULL default '0',
+  `empty_trash` int(1) NOT NULL default '0',
   `action_ok` int(1) NOT NULL default '0',
   `logout` int(1) NOT NULL default '0',
   `help` int(1) NOT NULL default '0',
@@ -703,6 +704,10 @@ ALTER TABLE `{PREFIX}user_roles`
  ADD COLUMN `export_static` int(1) NOT NULL DEFAULT '0' AFTER `import_static`;
 
 
+ALTER TABLE `{PREFIX}user_roles`
+  ADD COLUMN `empty_trash` int(1) NOT NULL DEFAULT '0' AFTER `delete_document`;
+
+
 ALTER TABLE `{PREFIX}user_attributes` ADD COLUMN `dob` integer(10) NOT NULL DEFAULT 0 AFTER `sessionid`,
  ADD COLUMN `gender` integer(1) NOT NULL DEFAULT 0 COMMENT '0 - unknown, 1 - Male 2 - female' AFTER `dob`,
  ADD COLUMN `country` varchar(5) NOT NULL DEFAULT '' AFTER `gender`,
@@ -901,8 +906,8 @@ INSERT IGNORE INTO `{PREFIX}system_settings`
 
 
 REPLACE INTO `{PREFIX}user_roles` 
-(id, name, description, frames, home, view_document, new_document, save_document, publish_document, delete_document, action_ok, logout, help, messages, new_user, edit_user, logs, edit_parser, save_parser, edit_template, settings, credits, new_template, save_template, delete_template, edit_snippet, new_snippet, save_snippet, delete_snippet, edit_chunk, new_chunk, save_chunk, delete_chunk, empty_cache, edit_document, change_password, error_dialog, about, file_manager, save_user, delete_user, save_password, edit_role, save_role, delete_role, new_role, access_permissions, bk_manager, new_plugin, edit_plugin, save_plugin, delete_plugin, new_module, edit_module, save_module, exec_module, delete_module, view_eventlog, delete_eventlog, manage_metatags, edit_doc_metatags, new_web_user, edit_web_user, save_web_user, delete_web_user, web_access_permissions, view_unpublished, import_static, export_static ) VALUES 
-(1, 'Administrator', 'Site administrators have full access to all functions', 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1);
+(id, name, description, frames, home, view_document, new_document, save_document, publish_document, delete_document, empty_trash, action_ok, logout, help, messages, new_user, edit_user, logs, edit_parser, save_parser, edit_template, settings, credits, new_template, save_template, delete_template, edit_snippet, new_snippet, save_snippet, delete_snippet, edit_chunk, new_chunk, save_chunk, delete_chunk, empty_cache, edit_document, change_password, error_dialog, about, file_manager, save_user, delete_user, save_password, edit_role, save_role, delete_role, new_role, access_permissions, bk_manager, new_plugin, edit_plugin, save_plugin, delete_plugin, new_module, edit_module, save_module, exec_module, delete_module, view_eventlog, delete_eventlog, manage_metatags, edit_doc_metatags, new_web_user, edit_web_user, save_web_user, delete_web_user, web_access_permissions, view_unpublished, import_static, export_static ) VALUES 
+(1, 'Administrator', 'Site administrators have full access to all functions', 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1);
 
 
 # 1 - "Parser Service Events", 2 -  "Manager Access Events", 3 - "Web Access Service Events", 4 - "Cache Service Events", 5 - "Template Service Events", 6 - Custom Events
@@ -1048,7 +1053,8 @@ UPDATE `{PREFIX}user_roles` SET
 	view_unpublished = 1,
 	publish_document = 1,
 	import_static = 1,
-	export_static = 1
+	export_static = 1,
+	empty_trash = 1
 	WHERE `id`=1;
 
 
