@@ -139,6 +139,7 @@ function deletedocument() {
 <input name="save_documentcheck" type="checkbox" onClick="changestate(document.userform.save_document)" <?php echo $roledata['save_document']==1 ? "checked" : "" ; ?>><input type="hidden" name="save_document" value="<?php echo $roledata['save_document']==1 ? 1 : 0 ; ?>"> <span style="cursor:hand" onClick="document.userform.save_documentcheck.click()"><?php echo $_lang['role_save_doc']; ?></span><br />
 <input name="publish_documentcheck" type="checkbox" onClick="changestate(document.userform.publish_document)" <?php echo $roledata['publish_document']==1 ? "checked" : "" ; ?>><input type="hidden" name="publish_document" value="<?php echo $roledata['publish_document']==1 ? 1 : 0 ; ?>"> <span style="cursor:hand" onClick="document.userform.publish_documentcheck.click()"><?php echo $_lang['role_publish_doc']; ?></span><br />
 <input name="delete_documentcheck" type="checkbox" onClick="changestate(document.userform.delete_document)" <?php echo $roledata['delete_document']==1 ? "checked" : "" ; ?>><input type="hidden" name="delete_document" value="<?php echo $roledata['delete_document']==1 ? 1 : 0 ; ?>"> <span style="cursor:hand" onClick="document.userform.delete_documentcheck.click()"><?php echo $_lang['role_delete_doc']; ?></span><br />
+<input name="empty_trashcheck" type="checkbox" onClick="changestate(document.userform.empty_trash)" <?php echo $roledata['empty_trash']==1 ? "checked" : "" ; ?>><input type="hidden" name="empty_trash" value="<?php echo $roledata['empty_trash']==1 ? 1 : 0 ; ?>"> <span style="cursor:hand" onClick="document.userform.empty_trashcheck.click()"><?php echo $_lang['role_empty_trash']; ?></span><br />
 <input name="edit_doc_metatagscheck" type="checkbox" onClick="changestate(document.userform.edit_doc_metatags)" <?php echo $roledata['edit_doc_metatags']==1 ? "checked" : "" ; ?>><input type="hidden" name="edit_doc_metatags" value="<?php echo $roledata['edit_doc_metatags']==1 ? 1 : 0 ; ?>"> <span style="cursor:hand" onClick="document.userform.edit_doc_metatagscheck.click()"><?php echo $_lang['role_edit_doc_metatags']; ?></span><br />
 <input name="empty_cachecheck" type="checkbox" onClick="changestate(document.userform.empty_cache)" checked disabled><input type="hidden" name="empty_cache" value="1"> <span style="cursor:hand"><?php echo $_lang['role_cache_refresh']; ?></span><br />
 <input name="view_unpublishedcheck" type="checkbox" onClick="changestate(document.userform.view_unpublished)" <?php echo $roledata['view_unpublished']==1 ? "checked" : "" ; ?>><input type="hidden" name="view_unpublished" value="<?php echo $roledata['view_unpublished']==1 ? 1 : 0 ; ?>"> <span style="cursor:hand" onClick="document.userform.view_unpublished.click()"><?php echo $_lang['role_view_unpublished']; ?></span><br />
