@@ -4,6 +4,7 @@ development release, and is only shown to give an idea of what's currently in th
 
 MODx 0.9.6.2 (rev 3621)
 ====================================
+* [MODX-124] Added a manager role for emptying the trash/permanently purging docs (rev 3682)
 * Changing TVs no longer looses the sort order  on templates to which they're assigned (see http://modxcms.com/forums/index.php/topic,16090.msg146881.html#msg146881) (3622)
 * Insert CDATA Tags into Weblogin snippet code so it will validate (3622)
 * [#MODX-101] Fix ability to make document Public after it has been assigned to one or more Document Groups
